tests/suite/fail/generated/lexer/fail_unclosed_comment_10.ny
//~ ERROR unclosed block comment
fn main() {
    let x = 10 /* unclosed block 10
    print(x)
}
